2005-01-31  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Notify.pm, PkgVersion.pm, Services.pm, Notify/*.pm:
	updated to a more modular notification system, including plugins
	for growl, apple text-to-speech, quicksilver, and syslog.

2005-01-31  Justin F. Hallett  <thesin@users.sourceforge.net>

	* VirtPackage.pm: Added Growl virtual pkg

2005-01-31  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: No 64-bit-specific gcc* pkgs exist at this time.

2005-01-31  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Warn for "Provides: foo (versiondata)"

2005-01-31  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Implemented --recursive for fetch mode. Implemented
	--dry-run in the engine (only available with fetch --recursive so
	far). Improved pkgspec constants usage in real_install.

2005-01-30  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm, Services.pm: Changed "growl" to notify.  This
	  will be replaced with something more configurable post-0.24.

2005-01-30  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* *.pm: Updated POD validation errors.

2005-01-30  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm:  Slightly rearrange order of functions, for clarity;
	expand documentation of inject_package.

2005-01-29  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm:  Add documentation
	
2005-01-27  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Warn if %p/lib/charset.alias in .deb other than libgettextN.

2005-01-27  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm, Package.pm, Engine.pm: Clean up aptdb (UseBinaryDist)
	stuff:
		- Normal usage of regexes, safe use of 'open', OO usage in
		apt-cache parsing.
		- Moved aptgetable status into regular fink DB.
		- Fixed bug where fink would try to use apt-get to fetch a .deb when
		the apt-cache info comes from dpkg status (not a real repo).
		- Removed Package::is_in_apt and fixed all uses thereof.