@@ -1,0 +1,3 @@
+ 2005-02-02  David H. <dmalloc@users.sourceforge.net>
+
+	* Notify:   Added exports test for Notify system.
