@@ -1,3 +1,14 @@
+2005-02-02  Dave Vasilevsky  <vasi@users.sourceforge.net>
+
+	* Notify.pm: Fixed dmacks' breakage, plus better test for new() failure.
+	* Notify.pm, Engine.pm: Add notifications for complete success, failure.
+
+2005-02-02  Daniel Macks  <dmacks@netspace.org>
+
+	* Notify.pm: Improved handling of failures of notifier new().
+	* Notify/*.pm: test for file executability/readability, not just
+	its existence.
+
 2005-01-31  Benjamin Reed  <rangerrick@users.sourceforge.net>
 
 	* Notify.pm, PkgVersion.pm, Services.pm, Notify/*.pm:
